--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "chromedriver": "^131.0.0",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "selenium-webdriver": "^4.26.0"
   }
 }
